Style link label to input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <form [formGroup]="tumblrForm">
-  <label>Blog</label>
-  <input type="text" autocomplete="off" formControlName="blog">
+  <label for="blog-name-input">Blog</label>
+  <input
+    id="blog-name-input"
+    type="text"
+    autocomplete="off"
+    formControlName="blog">
 </form>
