Use redux to manage blog state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     <span [innerHTML]="blog.postCount"></span>
     <button (click)="getPosts()">20 more posts</button>
     <ul>
-      <li *ngFor="let post of blog.posts">
+      <li *ngFor="let post of posts$ | async">
         <span>{{post.notes}} notes</span>
         <span>{{post.date}}</span>
         <a href="{{post.link}}" target="_blank">Link</a>
