--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
   <div *ngIf="blog">
     <span [innerHTML]="blog.name"></span>
     <span [innerHTML]="blog.postCount"></span>
-    <button (click)="getPosts()">20 more posts</button>
+    <button (click)="getPosts()">Next 20 posts</button>
+    <button (click)="deleteAllPosts()">Remove all posts</button>
     <ul>
       <li *ngFor="let post of posts$ | async">
         <span>{{post.notes}} notes</span>
