--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,8 @@
     <span [innerHTML]="cursor"></span>
     <span>/</span>
     <span [innerHTML]="size"></span>
-    <button (click)="getPosts()">Next 20 posts</button>
-    <button (click)="deleteAllPosts()">Remove all posts</button>
+    <button type="button" (click)="getPosts()">Next 20 posts</button>
+    <button type="button" (click)="deleteAllPosts()">Remove all posts</button>
     <ul>
       <li *ngFor="let post of posts$ | async">
         <span>{{post.notes}} notes</span>
