--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,15 @@ app-root {
 input[type="text"] {
   padding: 0 2px;
 }
+h1 {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 24px;
+  color: rgba(0,0,0,0.88);
+}
+h2 {
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 24px;
+  color: rgba(0,0,0,0.56);
+}
