--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,10 @@
 :host {
   display: block;
-  padding: 16px 24px;
+  padding: 0 24px;
+}
+.blog-info,
+.blog-posts,
+.blog-form {
+  display: block;
+  margin: 24px 0;
 }
