--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,10 +16,14 @@
     </div>
   </header>
   <ul class="blog-posts">
-    <li *ngFor="let post of posts$ | async">
-      <span>{{post.notes}} notes</span>
-      <span>{{post.date}}</span>
-      <a href="{{post.link}}" target="_blank">Link</a>
+    <li class="blog-post" *ngFor="let post of posts$ | async">
+      <a class="blog-link"
+        href="{{getPostLinkUrl(post)}}"
+        [ngStyle]="{'background-image': 'url(' + getPostPreviewUrl(post) + ')'}"
+        target="_blank">
+        <span class="blog-post-notes">{{post.notes}} notes</span>
+        <span class="blog-post-date">{{post.date}}</span>
+      </a>
     </li>
   </ul>
 </ng-template>
