--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,9 @@
         [ngStyle]="{'background-image': 'url(' + getPostPreviewUrl(post) + ')'}"
         title="{{post.date}}"
         target="_blank">
-        <span class="blog-post-notes">{{post.notes}} notes</span>
+        <a class="blog-post-notes" href="{{post.link}}" target="_blank">
+          {{post.notes}} notes
+        </a>
       </a>
     </li>
   </ul>
