Automatically focus on blog name input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,7 @@
     [formGroup]="tumblrForm"
     (ngSubmit)="getInfo()">
     <input
+      #blogInput
       type="text"
       class="blog-name-input"
       autocomplete="off"
