--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,7 +27,7 @@
   display: flex;
   align-items: flex-start;
 }
-.blog-link {
+.blog-resource {
   position: absolute;
   display: block;
   top: 0;
