Hide button for removing posts

--- a/src/app/blog-page/blog-page.html
+++ b/src/app/blog-page/blog-page.html
@@ -10,9 +10,9 @@
     <span [innerHTML]="size"></span>
   </h2>
   <div>
-    <button type="button" (click)="getPosts()">Get next {{end - start + 1}} posts</button>
-    <span>·</span>
-    <button type="button" (click)="deleteAllPosts()">Remove all posts</button>
+    <button type="button" (click)="getPosts()">Next {{end - start + 1}} posts</button>
+    <!-- <span>·</span> -->
+    <!-- <button type="button" (click)="deleteAllPosts()">Remove all posts</button> -->
   </div>
 </header>
 <ul class="blog-posts">
